<resources>
    <string name="app_name">Http_10</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_login_name">用户名:</string>
    <string name="txt_login_password">密码:</string>
    <string name="btn_login_get">登录_get</string>
    <string name="btn_login_post">登录_post</string>
    <string name="btn_reset">重置</string>
    <string name="btn_register">注册</string>
    <string name="txt_interesting">兴趣爱好</string>
    <string name="chk_game">游戏</string>
    <string name="chk_music">音乐</string>
    <string name="chk_sport">体育</string>

</resources>
